Update routes, README and api swagger file
