# api/routes/cat.go
@@ -10,43 +10,43 @@ import (
 func NewCatRoutes(catHandlers handlers.CatHandlers) []*Route {
 	return []*Route{
 		{
-			Path:         "/api/category",
+			Path:         "/category",
 			Method:       http.MethodGet,
 			Handler:      catHandlers.GetCategory,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/category",
+			Path:         "/category",
 			Method:       http.MethodPost,
 			Handler:      catHandlers.UpdateCategory,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/url",
+			Path:         "/url",
 			Method:       http.MethodPut,
 			Handler:      catHandlers.AddURL,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/url",
+			Path:         "/url",
 			Method:       http.MethodDelete,
 			Handler:      catHandlers.DeleteURL,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/url_report",
+			Path:         "/url_report",
 			Method:       http.MethodPost,
 			Handler:      catHandlers.ReportMiscategorization,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/urls",
+			Path:         "/urls",
 			Method:       http.MethodDelete,
 			Handler:      catHandlers.DeleteURLs,
 			AuthRequired: true,
 		},
 		{
-			Path:         "/api/urls",
+			Path:         "/urls",
 			Method:       http.MethodGet,
 			Handler:      catHandlers.GetURLs,
 			AuthRequired: true,
